5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1633_2918.log
== TEST (2019-04-02 19:06:51) 
-- CODE:
valordoingresso=float(input("digite o valor"))
precopromocioanl=valordoingresso-(valordoingresso*(20/100))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos))
-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:07:13) 
-- CODE:
valordoingresso=float(input("digite o valor"))
precopromocioanl=valordoingresso-(valordoingresso*(20/100))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos))
-- EXECUTION TIME:
0.142868
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:23) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos))
-- OUTPUT:
142
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:08:35) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos))
-- EXECUTION TIME:
0.221818
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
216
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:55) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:04) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:19) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:38) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:54) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:10:27) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.151705
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:14:13) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
precopromo=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:14:32) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
precopromo=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.208134
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:15:10) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromo=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:15:19) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromo=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.175904
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:31:07) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
precopromo=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:31:17) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
precopromo=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.193609
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:31:24) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
precopromo=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:31:28) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
precopromo=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.195776
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:32:08) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.151246
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:32:10) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:32:23) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.236069
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:34:44) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso,qingressos,2))
-- EXECUTION TIME:
0.170106
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2918/main.py", line 3, in <module>
    print(round(valordoingresso,qingressos,2))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:34:45) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso,qingressos,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(valordoingresso,qingressos,2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:34:53) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso,qingressos,2))
-- EXECUTION TIME:
0.202067
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2918/main.py", line 3, in <module>
    print(round(valordoingresso,qingressos,2))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:37:19) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso+qingressos,2))
-- EXECUTION TIME:
0.227488
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
33.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
34.95
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
45.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:37:20) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso+qingressos,2))
-- OUTPUT:
33.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:37:50) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=int(input("digite o numero"))
print(round(valordoingresso+qingressos,2))
-- EXECUTION TIME:
0.146279
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
33.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
34.95
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
45.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:38:42) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.15375
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
digite o valordigite o numero142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
digite o valordigite o numero215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
digite o valordigite o numero127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:40:17) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.134
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:18) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:40:27) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.203461
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:43) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:40:51) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.160713
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:41:05) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:41:19) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- EXECUTION TIME:
0.150771
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
142.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
215.6
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
127.26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:41:23) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(valordoingresso*qingressos,2))
-- OUTPUT:
142.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:41:59) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromacional=valordoingresso-(valordoingresso*(20/100))
print(round(precopromocional*qingressos,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(precopromocional*qingressos,2))
NameError: name 'precopromocional' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:42:33) 
-- CODE:
valordoingresso=float(input("digite o valor"))
qingressos=float(input("digite o numero"))
precopromocional=valordoingresso-(valordoingresso*(20/100))
print(round(precopromocional*qingressos,2))
-- EXECUTION TIME:
0.167319
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
114.0
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
101.81
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
